# rakuos-welcome

./: Cargo.toml  README.md
crates/welcome-cosmic/: Cargo.toml
crates/welcome-cosmic/src/: main.rs
crates/welcome-gtk/: Cargo.toml
crates/welcome-gtk/src/: main.rs
crates/welcome-qt/: .qmlls.ini  Cargo.toml  build.rs
crates/welcome-qt/qml/: main.qml
crates/welcome-qt/src/: backend.rs  main.rs  qt_helpers.cpp
data/: org.rakuos.Welcome.desktop  rakuos-welcome  rakuos-welcome-autostart.desktop  rakuos-welcome.spec
