[package]
name = "welcome-cosmic"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[[bin]]
name = "rakuos-welcome-cosmic"
path = "src/main.rs"

[dependencies]
# libcosmic will be added when implementing the COSMIC frontend
# It is sourced directly from System76's GitHub, not crates.io
