[package]
name = "welcome-cosmic"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[[bin]]
name = "rakuos-welcome-cosmic"
path = "src/main.rs"

[dependencies]
libcosmic = { git = "https://github.com/pop-os/libcosmic", features = ["wayland", "tokio"] }
