[package]
name = "welcome-qt"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[[bin]]
name = "rakuos-welcome-qt"
path = "src/main.rs"

[dependencies]
cxx-qt = "0.7"
cxx-qt-lib = { version = "0.7", features = ["qt_gui", "full"] }

[build-dependencies]
cxx-qt-build = "0.7"
